upgraded to jdk11 but for spring 2.0.1.release. all tests passing